--- a/GameTogether/appsettings.json
+++ b/GameTogether/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost\\SQLExpress;database=GameTogether;integrated security=true;"
+  },
+  "FirebaseProjectId": "gametogether-dedc6"
 }
